<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp"
    tools:context="com.codepath.apps.restclienttemplate.TimelineActivity">

    <ImageView
        android:scaleType="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivProfileImage"
        android:src="@drawable/ic_launcher"
        android:layout_marginRight="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeline_user_label"
        android:id="@+id/tvUser"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:textStyle="bold"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeline_screename_label"
        android:id="@+id/tvScreenName"
        android:textSize="13dp"
        android:layout_alignBottom="@+id/tvUser"
        android:layout_toRightOf="@+id/tvUser"
        android:layout_toEndOf="@+id/tvUser"
        android:textColor="#ffaeaeae"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeline_createdat_label"
        android:id="@+id/tvCreatedAt"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffaeaeae"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeline_body_label"
        android:id="@+id/tvBody"
        android:autoLink="all"
        android:linksClickable="true"
        android:layout_below="@+id/tvUser"
        android:layout_alignLeft="@+id/tvUser"
        android:layout_alignStart="@+id/tvUser"
        android:layout_alignRight="@+id/tvCreatedAt"
        android:layout_alignEnd="@+id/tvCreatedAt" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_below="@+id/tvBody"
        android:descendantFocusability="blocksDescendants"
        android:layout_height="32dp"
        android:layout_marginTop="6dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="12dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingTop="0dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivReplyImage"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_reply"
                android:scaleType="center"
                android:adjustViewBounds="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="12dp"
            android:paddingTop="5dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivRetweetImage"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_twitter_retweet" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="12dp"
            android:paddingTop="5dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivFavoriteImage"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_star" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="12dp" />

    </LinearLayout>

</RelativeLayout>
